# dyspraxis

./: .gitignore  flake.nix  pre-commit.nix
dev/: devShells.nix  dream2nix.nix  pkgs.nix  pre-commit.nix
nix/: default.nix  pre-commit.nix
nnfs/: default.nix
nnfs/python/: pyproject.toml
projects/nnfs-python/: default.nix  pyproject.toml
projects/nnfs-python/tests/: __init__.py
projects/nnfs-rust/: Cargo.toml  default.nix
projects/nnfs/python/: .envrc  .gitignore  default.nix  pyproject.toml
projects/nnfs/python/docs/: notes.md
projects/nnfs/python/notebooks/: chapter_3.ipynb
projects/nnfs/python/src/nnfspy/: __init__.py  activation.py  dense.py
projects/nnfs/python/tests/: test_chapter_2.py  test_chapter_3.py  test_chapter_4.py
projects/nnfs/rust/: default.nix
projects/ziglings/: default.nix
projects/ziglings/exercises/: 025_errors5.zig  038_structs2.zig
ziglings/: default.nix
ziglings/exercises/: 071_comptime6.zig
