[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "nnfspy"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.3",
    "nnfs>=0.5.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
]
dev = [
    "jupyterlab>=4.1.5",
]
